--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -8,6 +8,9 @@ import { markdownify } from "@/lib/utils/textConverter";
 
 <footer class="section bg-theme-dark">
   <div class="container text-center">
+    <p class="mb-8">"Mỗi ngày chỉ cần 1%"</p>
+  </div>
+  <div class="container text-center">    
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
       {
@@ -19,7 +22,7 @@ import { markdownify } from "@/lib/utils/textConverter";
           </li>
         ))
       }
-    </ul>
+    </ul>    
     {/* social icons */}
     <Social source={social} className="social-icons mb-8" />
     {/* copyright */}
